#534 Set the invoiceFee defined on the customer profile for the PIA payment method

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-overview/template/invoice-overview.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-overview/template/invoice-overview.html
@@ -128,7 +128,7 @@
                 <tr *ngFor="let payment of payer.paymentList" class="selectable">
                     <td>{{ currentInvoice.getCustomerDO(payer.customerId).customerName }}
                         <div class="payment-type">
-                            <span>{{ 'Payment via' | translate}} {{getPaymentMethodDisplayName(payment) | translate}}   </span>
+                            <span>{{ 'Payment via' | translate}} {{getPaymentMethodDisplayName(payer, payment) | translate}}   </span>
                             <span *ngIf="!payment.shouldApplyTransactionFee"> ; {{ 'No transaction fee' | translate }} </span>
                             <span *ngIf="payment.shouldApplyTransactionFee"> ; {{ 'Price with transaction fee' | translate }}: {{ ccySymbol }} {{ payment.amountPlusTransactionFee }} </span>
                         </div>
