#536 Invoice items representing booking price are clickable and redirect to the booking operations page

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-overview/template/invoice-overview.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-overview/template/invoice-overview.html
@@ -91,7 +91,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let itemVm of currentInvoice.invoiceItemVms" class="selectable">
+                <tr *ngFor="let itemVm of currentInvoice.invoiceItemVms" [ngClass]="{'selectable': itemVm.bookingId}" (click)="viewBooking(itemVm)">
                     <td>
                         <i *ngIf="itemVm.isRelatedToBooking" class="unitpal-font">%</i> {{ getInvoiceItemDisplayName(itemVm) }}
                         <div class="subtitle" *ngIf="itemVm.subtitle">
