#540 Check in button should try to automatically check in bookings with reserved rooms

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/arrivals-pane/components/arrival-item/template/arrival-item.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/arrivals-pane/components/arrival-item/template/arrival-item.html
@@ -28,7 +28,7 @@
 			</div>
 		</div>
 		<div class="footer flex-jc-end">
-			<button class="btn btn-sm btn-danger" (click)="openCheckInModal()" >
+			<button class="btn btn-sm btn-danger" (click)="checkIn()" >
 				<span class="uppercase"> {{ 'Check In' | translate }} </span> <span class="unitpal-font">/</span>
 			</button>
 		</div>
