--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-transfer/template/invoice-transfer.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-transfer/template/invoice-transfer.html
@@ -7,7 +7,7 @@
         </div>
     </div>
     <div class="row invoice-transfer-row m-l-12 m-r-12">
-        <div class="col-xs-6 invoice-transfer-column p-l-0 p-r-6">
+        <div class="col-xs-6 invoice-transfer-column p-l-0 p-r-6 full-height">
             <div class="invoice-transfer-summary p-r-16">
                 <div class="invoice-title">
                     {{ 'Invoice' | translate }} {{ currentInvoice.invoice.reference }}
@@ -23,34 +23,34 @@
                 >
             </invoice-edit>
         </div>
-        <div class="col-xs-6 invoice-transfer-column p-l-6 p-r-0">
+
+        <div class="col-xs-6 invoice-transfer-column p-l-6 p-r-0 full-height" *ngIf="!isInvoiceSelectedForTransfer()">
             <div class="invoice-transfer-summary">
-                <div *ngIf="isInvoiceSelectedForTransfer()">
-                    <div class="invoice-transfer-summary p-l-16">
-                        <div class="invoice-title p-l-16">
-                            {{ 'Invoice' | translate }} {{ transferInvoice.invoice.reference }}
-                        </div>
-                        <i *ngIf="hasInvoiceRemoveRight(transferInvoice)" class="fa fa-trash invoice-change-button pull-right clickable" title="{{ 'Delete this invoice' | translate }}" (click)="deleteTransferInvoice()"></i>
-                    </div>
-                    <invoice-edit
-                        [invoiceVM]="transferInvoice"
-                        [invoiceOperationsPageData]="invoiceOperationsPageData"
-                        [disableInvoiceSplit]="true"
-                        [transferDirection]="'left'"
-                        (onTransfer)="transfer($event)"
-                        >
-                    </invoice-edit>
+                <div style="text-align: center">
+                    <button class="select-invoice clickable" (click)="openInvoiceSelectionModal()">{{ 'Select an Invoice' | translate }}</button>
                 </div>
-                <div *ngIf="!isInvoiceSelectedForTransfer()">
-                    <div style="text-align: center">
-                        <button class="select-invoice clickable" (click)="openInvoiceSelectionModal()">{{ 'Select an Invoice' | translate }}</button>
-                    </div>
-                    <div class="no-invoice-selected-explanation">
-                        <div class="title">{{ 'No Invoice Selected' | translate }}</div>
-                        <div class="subtitle">{{ 'You can select an invoice to transfer items to or to transfer items from.' | translate }}</div>
-                    </div>
+                <div class="no-invoice-selected-explanation">
+                    <div class="title">{{ 'No Invoice Selected' | translate }}</div>
+                    <div class="subtitle">{{ 'You can select an invoice to transfer items to or to transfer items from.' | translate }}</div>
                 </div>
             </div>
+        </div>
+
+        <div class="col-xs-6 invoice-transfer-column p-l-6 p-r-0 full-height" *ngIf="isInvoiceSelectedForTransfer()">
+            <div class="invoice-transfer-summary p-l-16">
+                <div class="invoice-title p-l-16">
+                    {{ 'Invoice' | translate }} {{ transferInvoice.invoice.reference }}
+                </div>
+                <i *ngIf="hasInvoiceRemoveRight(transferInvoice)" class="fa fa-trash invoice-change-button pull-right clickable" title="{{ 'Delete this invoice' | translate }}" (click)="deleteTransferInvoice()"></i>
+            </div>
+            <invoice-edit
+                [invoiceVM]="transferInvoice"
+                [invoiceOperationsPageData]="invoiceOperationsPageData"
+                [disableInvoiceSplit]="true"
+                [transferDirection]="'left'"
+                (onTransfer)="transfer($event)"
+                >
+            </invoice-edit>
         </div>
     </div>
 </div>
