--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -4719,16 +4719,10 @@ textarea.payer-details {
 
 
 .select-invoice {
-    font-weight: 400;
-    font-style: normal;
-    font-size: 16px;
-    color: #333333;
-    outline: none;
-    border: none;
-    padding: 4px;
-    background-color: transparent;
+    color: #F66600;
     position: relative;
-    top: 18px;
+    top: 22px;
+    font-weight: 400;
 }
 
 .no-invoice-selected-explanation {
