#546 Used mongo_url param in mongo driver config in order to support replica set.

--- a/ansible/roles/unitpal/templates/azure.js.j2
+++ b/ansible/roles/unitpal/templates/azure.js.j2
@@ -3,11 +3,7 @@ module.exports = {
 	connections: {
 		mongodbazure: {
 			adapter: 'sails-mongo',
-			host: "{{ mongo_host }}",
-			port: {{ mongo_port }},
-			user: "{{ mongo_user }}",
-			password: "{{ mongo_passwd }}",
-			database: "{{ mongo_db }}"
+			url: {{ mongo_url }}
 		}
 	},
 	models: {
