--- a/ansible/roles/unitpal/templates/azure.js.j2
+++ b/ansible/roles/unitpal/templates/azure.js.j2
@@ -3,7 +3,7 @@ module.exports = {
 	connections: {
 		mongodbazure: {
 			adapter: 'sails-mongo',
-			url: {{ mongo_url }}
+			url: "{{ mongo_url }}"
 		}
 	},
 	models: {
