#545 Removed some incorrect css classes

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/rooms-canvas/components/room-card/template/room-card.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/rooms-canvas/components/room-card/template/room-card.html
@@ -7,7 +7,7 @@
 			<div class="room-type ellipsis-text" title="{{ roomVM.categoryLabel }}">{{ roomVM.categoryLabel }}</div>
 			<div *ngIf="hasInvoice" class="invoice-info">
 				<div class="orange-color f-12">
-					<span class="ellipsis-text f-12 <invoice-price></invoice-price>" >{{ invoicePrice | price }}{{ roomVM.currency.nativeSymbol }}</span>
+					<span class="ellipsis-text f-12" >{{ invoicePrice | price }}{{ roomVM.currency.nativeSymbol }}</span>
 				</div>
 				<button class="btn btn-sm btn-danger" (click)="openInvoiceModal()">
 					<span class="unitpal-font p-r-6" >L</span> <span class="uppercase">{{ 'Pay' | translate }}</span>
@@ -53,7 +53,7 @@
 			<div class="room-type ellipsis-text" title="{{ roomVM.categoryLabel }}">{{ roomVM.categoryLabel }}</div>
 			<div *ngIf="hasInvoice" class="invoice-info">
 				<div class="orange-color f-12">
-					<span class="ellipsis-text f-12 <invoice-price></invoice-price>" >{{ invoicePrice | price }}{{ roomVM.currency.nativeSymbol }}</span>
+					<span class="ellipsis-text f-12" >{{ invoicePrice | price }}{{ roomVM.currency.nativeSymbol }}</span>
 				</div>
 				<button class="btn btn-sm btn-danger" (click)="openInvoiceModal()">
 					<span class="unitpal-font p-r-6" >L</span> <span class="uppercase">{{ 'Pay' | translate }}</span>
@@ -91,7 +91,7 @@
 			<div class="room-type ellipsis-text" title="{{ roomVM.categoryLabel }}">{{ roomVM.categoryLabel }}</div>
 			<div *ngIf="hasInvoice" class="invoice-info">
 				<div class="orange-color f-12">
-					<span class="ellipsis-text f-12 <invoice-price></invoice-price>" >{{ invoicePrice | price }}{{ roomVM.currency.nativeSymbol }}</span>
+					<span class="ellipsis-text f-12" >{{ invoicePrice | price }}{{ roomVM.currency.nativeSymbol }}</span>
 				</div>
 				<button class="btn btn-sm btn-danger" (click)="openInvoiceModal()">
 					<span class="unitpal-font p-r-6" >L</span> <span class="uppercase">{{ 'Pay' | translate }}</span>
@@ -131,7 +131,7 @@
 			<div class="room-type ellipsis-text" title="{{ roomVM.categoryLabel }}">{{ roomVM.categoryLabel }}</div>
 			<div *ngIf="hasInvoice" class="invoice-info">
 				<div class="orange-color f-12">
-					<span class="ellipsis-text f-12 <invoice-price></invoice-price>" >{{ invoicePrice | price }}{{ roomVM.currency.nativeSymbol }}</span>
+					<span class="ellipsis-text f-12" >{{ invoicePrice | price }}{{ roomVM.currency.nativeSymbol }}</span>
 				</div>
 				<button class="btn btn-sm btn-danger" (click)="openInvoiceModal()">
 					<span class="unitpal-font p-r-6" >L</span> <span class="uppercase">{{ 'Pay' | translate }}</span>
@@ -167,7 +167,7 @@
 			<div class="room-type ellipsis-text" title="{{ roomVM.categoryLabel }}">{{ roomVM.categoryLabel }}</div>
 			<div *ngIf="hasInvoice" class="invoice-info">
 				<div class="orange-color f-12">
-					<span class="ellipsis-text f-12 <invoice-price></invoice-price>" >{{ invoicePrice | price }}{{ roomVM.currency.nativeSymbol }}</span>
+					<span class="ellipsis-text f-12" >{{ invoicePrice | price }}{{ roomVM.currency.nativeSymbol }}</span>
 				</div>
 				<button class="btn btn-sm btn-danger" (click)="openInvoiceModal()">
 					<span class="unitpal-font p-r-6" >L</span> <span class="uppercase">{{ 'Pay' | translate }}</span>
